fix card home size : too big

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,7 +8,7 @@
   background-color: $main-blue;
   border-radius: 12px;
   color: white;
-  height: 380px;
+  height: 290px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
